fixed image problem on iphone

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -562,7 +562,7 @@ aside {
   @media (max-width: 480px) { 
   margin-left: 5px;
   display: inline-block;
-  width: 86%;
+  width: 82%;
   margin-bottom: 0px;
 }
 @media (min-width: 481px) { 
